<resources>
    <string name="app_name">Eazy Health</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_history">History</string>
    <string name="menu_profile">Profile</string>

    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="pipe">|</string>
    <string name="show_password">Show Password</string>
    <string name="search_title_patient">Search Schedule</string>
    <string name="update">Update</string>
    <string name="cancel">Batal</string>
    <string name="ok">Ok</string>
    <string name="title">Title</string>
    <string name="sorting">Sorting</string>
    <string name="filter">Filter</string>
    <string name="save">Simpan</string>
    <string name="detail_medical_checkup">Rincian Medical Check Up</string>
    <string name="add">Tambah</string>
    <string name="price">Harga</string>
    <string name="total_price">Total Harga</string>
    <string name="mcu">Medical Check Up</string>
    <string name="medical_not_valid">Medical data not valid</string>
    <string name="please_choose_date">Pilih Tanggal</string>
    <string name="please_choose_time">Pilih Jam</string>
    <string name="choose_schedule">Pilih Jadwal</string>
    <string name="cart_title">Konfirmasi Pemesanan</string>
    <string name="payment_method">Metode Pembayaran</string>
    <string name="goto_payment">Pilih Pembayaran</string>
    <string name="pay">Lakukan Pembayaran</string>
    <string name="account_number">Account Number</string>
    <string name="account_name">Account Name</string>
    <string name="bank_account">Bank Account (ex. Mandiri, BCA, etc)</string>
    <string name="atm_and_bank_transfer">Bank Transfer</string>
    <string name="bank_transfer_bca">Nomor Rekening 123-456-789\nAtas nama SIMANJUNTAK</string>
    <string name="bank_transfer_mandiri">Nomor Rekening 123-456-789\nAtas nama SIMANJUNTAK</string>
    <string name="atm_transfer_bca">Nomor Rekening 123-456-789\nAtas nama SIMANJUNTAK</string>
    <string name="atm_transfer_mandiri">Nomor Rekening 123-456-789\nAtas nama SIMANJUNTAK</string>
    <string name="user_bank_account_data">Sender Bank Account</string>
    <string name="facebook_app_id">235526613474053</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="terms_use_agreement">I agree to the Terms of Use</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="reset_password">Reset Password</string>
    <string name="empty_cart">Pemesanan masih kosong</string>

    <string name="hint_name">Nama Lengkap</string>
    <string name="hint_address">Alamat Rumah</string>
    <string name="hint_mobile_phone">Nomor Telepon Selular</string>
    <string name="hint_email">Alamat Email</string>
    <string name="hint_birthday">Tanggal Lahir</string>
    <string name="hint_gender">Jenis Kelamin</string>
    <string name="hint_blood">Golongan Darah</string>
</resources>
