<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <view
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        class="net.eazyhealth.id.app.custom.CustomScrollView">
        <view
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            class="net.eazyhealth.id.app.custom.CustomLinearLayout"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical">
            <view
                android:id="@+id/profile_picture_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                class="net.eazyhealth.id.app.custom.CustomImageView"
                android:src="@drawable/profile_picture"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <view
                        style="@style/edit_text_normal"
                    android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        class="net.eazyhealth.id.app.custom.CustomEditText"
                    android:hint="@string/hint_name"
                    android:inputType="textCapWords"
                    android:drawableLeft="@drawable/name"
                    android:drawablePadding="@dimen/sidemenu_icon_left" />

                    <view
                        style="@style/edit_text_normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        class="net.eazyhealth.id.app.custom.CustomEditText"
                        android:hint="@string/hint_address"
                        android:drawableLeft="@drawable/address"
                        android:inputType="text"
                        android:drawablePadding="@dimen/sidemenu_icon_left" />


                    <view
                        style="@style/edit_text_normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/phone"
                        class="net.eazyhealth.id.app.custom.CustomEditText"
                        android:hint="@string/hint_mobile_phone"
                        android:inputType="phone"
                        android:drawablePadding="@dimen/sidemenu_icon_left" />

                    <view
                        style="@style/edit_text_normal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        class="net.eazyhealth.id.app.custom.CustomEditText"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:drawableLeft="@drawable/email"
                        android:drawablePadding="@dimen/sidemenu_icon_left" />

                    <view
                        style="@style/edit_text_normal"
                        android:id="@+id/birthday_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        class="net.eazyhealth.id.app.custom.CustomEditText"
                        android:hint="@string/hint_birthday"
                        android:inputType="date"
                        android:drawableLeft="@drawable/birthday"
                        android:drawablePadding="@dimen/sidemenu_icon_left" />

                    <view
                        style="@style/edit_text_normal"
                        android:id="@+id/gender_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        class="net.eazyhealth.id.app.custom.CustomEditText"
                        android:hint="@string/hint_gender"
                        android:inputType="text"
                        android:drawableLeft="@drawable/gender"
                        android:drawablePadding="@dimen/sidemenu_icon_left" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <view
                        style="@style/edit_text_normal"
                        android:id="@+id/blood_type_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        class="net.eazyhealth.id.app.custom.CustomEditText"
                        android:hint="@string/hint_blood"
                        android:inputType="text"
                        android:drawableLeft="@drawable/blood"
                        android:drawablePadding="@dimen/sidemenu_icon_left" />
                </LinearLayout>
            </LinearLayout>

            <view
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                class="net.eazyhealth.id.app.custom.CustomRippleView"
                android:layout_gravity="center_horizontal">

                <view
                    style="@style/text_view_big_white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    class="net.eazyhealth.id.app.custom.CustomTextView"
                    android:background="@color/pink_0"
                    android:text="@string/update"
                    android:padding="10dp"
                    android:gravity="center" />
            </view>

        </view>
    </view>
</LinearLayout>