<?xml version="1.0" encoding="utf-8"?>
<net.eazyhealth.id.app.custom.CustomScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.eazyhealth.id.app.activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

            <view
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                class="net.eazyhealth.id.app.custom.CustomLinearLayout"
                android:orientation="vertical"
                android:paddingLeft="30dp"
                android:paddingRight="30dp">

                <view
                    style="@style/edit_text_normal"
                    android:id="@+id/username_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    class="net.eazyhealth.id.app.custom.CustomAutoCompleteTextView"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:nextFocusDown="@+id/password_et" />

                <view
                    style="@style/edit_text_normal"
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    class="net.eazyhealth.id.app.custom.CustomEditText"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone" />

                <view
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    class="net.eazyhealth.id.app.custom.CustomLinearLayout"
                    android:orientation="horizontal"
                    android:paddingTop="7.5dp"
                    android:paddingBottom="12.5dp">

                    <view
                        android:id="@+id/show_password_cb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        class="net.eazyhealth.id.app.custom.CustomCheckBox" />

                    <view
                        style="@style/text_view_small_grey"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        class="net.eazyhealth.id.app.custom.CustomTextView"
                        android:text="@string/show_password" />

                </view>

                <view
                    android:id="@+id/login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    class="net.eazyhealth.id.app.custom.CustomRippleView">

                    <view
                        style="@style/text_view_big_white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        class="net.eazyhealth.id.app.custom.CustomTextView"
                        android:background="@color/pink_0"
                        android:text="@string/login"
                        android:padding="10dp"
                        android:gravity="center" />
                </view>

                <view
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    class="net.eazyhealth.id.app.custom.CustomLinearLayout"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="20dp">

                    <view
                        android:id="@+id/btn_forgot_password"
                        style="@style/text_view_small_grey"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        class="net.eazyhealth.id.app.custom.CustomTextView"
                        android:text="@string/forgot_password"
                        android:gravity="center"
                        android:drawableBottom="@drawable/dashed_line" />
                    <!--<view-->
                    <!--style="@style/Base.TextAppearance.AppCompat.Medium"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--class="net.eazyhealth.id.app.custom.CustomTextView"/>-->
                    <view
                        android:id="@+id/btn_register"
                        style="@style/text_view_small_grey"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        class="net.eazyhealth.id.app.custom.CustomTextView"
                        android:text="@string/register"
                        android:gravity="center"
                        android:drawableBottom="@drawable/dashed_line" />

                </view>

                <view
                    android:id="@+id/btn_login_fb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    class="net.eazyhealth.id.app.custom.CustomRippleView">

                    <view
                        style="@style/button_normal_white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        class="net.eazyhealth.id.app.custom.CustomButton"
                        android:background="@color/facebook_blue"
                        android:drawableLeft="@drawable/ic_action_fb_white"
                        android:text="Login with Facebook"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp" />

                </view>

            </view>

        </LinearLayout>

        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/sb"/>

    </RelativeLayout>
</net.eazyhealth.id.app.custom.CustomScrollView>
