<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">
    <view
        android:id="@+id/title_tv"
        style="@style/text_view_big_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12.5dp"
        android:paddingBottom="12.5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        class="net.eazyhealth.id.app.custom.CustomTextView"
        android:background="@color/green_0"
        android:text="@string/choose_schedule"
        android:singleLine="true"
        android:ellipsize="end"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="horizontal">
        <ScrollView
            android:id="@+id/sv_rg_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fadeScrollbars="false">
            <view
                android:id="@+id/rg_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                class="net.eazyhealth.id.app.custom.CustomRadioGroup"
                android:padding="10dp"/>
        </ScrollView>
        <ScrollView
            android:id="@+id/sv_rg_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fadeScrollbars="false">
            <view
                android:id="@+id/rg_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                class="net.eazyhealth.id.app.custom.CustomRadioGroup"
                android:padding="10dp"/>
        </ScrollView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <view
            android:id="@+id/cancel_btn"
            style="@style/text_view_normal_grey"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            class="net.eazyhealth.id.app.custom.CustomTextView"
            android:background="@drawable/btn_option"
            android:gravity="center"
            android:text="@string/cancel" />
        <view
            android:id="@+id/ok_btn"
            style="@style/text_view_normal_grey"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            class="net.eazyhealth.id.app.custom.CustomTextView"
            android:background="@drawable/btn_option"
            android:gravity="center"
            android:text="@string/save" />
    </LinearLayout>
</LinearLayout>