<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="@color/green_10"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:src="@android:drawable/sym_def_app_icon" />

        <view
            style="@style/text_view_normal_white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="Android Studio"
            class="net.eazyhealth.id.app.custom.CustomTextView" />

        <view
            style="@style/text_view_small_grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="android.studio@android.com"
            android:textColor="@color/text_secondary_light"
            class="net.eazyhealth.id.app.custom.CustomTextView" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/sidemenu_icon_top_bottom"
        android:paddingBottom="@dimen/sidemenu_icon_top_bottom">

        <view
            android:id="@+id/rv_dashboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            class="net.eazyhealth.id.app.custom.CustomRippleView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <!-- 24dip -->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_dashboard"
                    android:paddingLeft="@dimen/sidemenu_icon_left"
                    android:paddingRight="@dimen/sidemenu_icon_right"
                    android:paddingTop="@dimen/sidemenu_icon_top_bottom"
                    android:paddingBottom="@dimen/sidemenu_icon_top_bottom" />

                <view
                    style="@style/text_view_normal_grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    class="net.eazyhealth.id.app.custom.CustomTextView"
                    android:text="@string/menu_dashboard"
                    android:textColor="@color/colorPrimaryDark" />

            </LinearLayout>

        </view>

        <view
            android:id="@+id/rv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            class="net.eazyhealth.id.app.custom.CustomRippleView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <!-- 24dip -->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_login"
                    android:paddingLeft="@dimen/sidemenu_icon_left"
                    android:paddingRight="@dimen/sidemenu_icon_right"
                    android:paddingTop="@dimen/sidemenu_icon_top_bottom"
                    android:paddingBottom="@dimen/sidemenu_icon_top_bottom" />

                <view
                    style="@style/text_view_normal_grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    class="net.eazyhealth.id.app.custom.CustomTextView"
                    android:text="@string/login"
                    android:textColor="@color/colorPrimaryDark" />

            </LinearLayout>

        </view>

        <view
            android:id="@+id/rv_schedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            class="net.eazyhealth.id.app.custom.CustomRippleView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <!-- 24dip -->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_schedule"
                    android:paddingLeft="@dimen/sidemenu_icon_left"
                    android:paddingRight="@dimen/sidemenu_icon_right"
                    android:paddingTop="@dimen/sidemenu_icon_top_bottom"
                    android:paddingBottom="@dimen/sidemenu_icon_top_bottom" />

                <view
                    style="@style/text_view_normal_grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    class="net.eazyhealth.id.app.custom.CustomTextView"
                    android:text="@string/menu_schedule"
                    android:textColor="@color/colorPrimaryDark" />

            </LinearLayout>

        </view>

        <view
            android:id="@+id/rv_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            class="net.eazyhealth.id.app.custom.CustomRippleView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <!-- 24dip -->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_history"
                    android:paddingLeft="@dimen/sidemenu_icon_left"
                    android:paddingRight="@dimen/sidemenu_icon_right"
                    android:paddingTop="@dimen/sidemenu_icon_top_bottom"
                    android:paddingBottom="@dimen/sidemenu_icon_top_bottom" />

                <view
                    style="@style/text_view_normal_grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    class="net.eazyhealth.id.app.custom.CustomTextView"
                    android:text="@string/menu_history"
                    android:textColor="@color/colorPrimaryDark" />

            </LinearLayout>

        </view>

        <view
            android:id="@+id/rv_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            class="net.eazyhealth.id.app.custom.CustomRippleView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <!-- 24dip -->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_profile"
                    android:paddingLeft="@dimen/sidemenu_icon_left"
                    android:paddingRight="@dimen/sidemenu_icon_right"
                    android:paddingTop="@dimen/sidemenu_icon_top_bottom"
                    android:paddingBottom="@dimen/sidemenu_icon_top_bottom" />

                <view
                    style="@style/text_view_normal_grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    class="net.eazyhealth.id.app.custom.CustomTextView"
                    android:text="@string/menu_profile"
                    android:textColor="@color/colorPrimaryDark" />

            </LinearLayout>

        </view>

        <view
            android:id="@+id/rv_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            class="net.eazyhealth.id.app.custom.CustomRippleView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <!-- 24dip -->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_logout"
                    android:paddingLeft="@dimen/sidemenu_icon_left"
                    android:paddingRight="@dimen/sidemenu_icon_right"
                    android:paddingTop="@dimen/sidemenu_icon_top_bottom"
                    android:paddingBottom="@dimen/sidemenu_icon_top_bottom" />

                <view
                    style="@style/text_view_normal_grey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    class="net.eazyhealth.id.app.custom.CustomTextView"
                    android:text="@string/menu_logout"
                    android:textColor="@color/colorPrimaryDark" />

            </LinearLayout>

        </view>

    </LinearLayout>

</LinearLayout>